# soma-retargeter-plus

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
app/: bvh_to_csv_converter.py
assets/: adam_lite_bvh_to_csv_converter_config.json  default_bvh_to_csv_converter_config.json  pi_plus_bvh_to_csv_converter_config.json  pm01_bvh_to_csv_converter_config.json  selected_sonic_pm01_config.json
assets/motions/: pm01_reference_pose.csv
assets/motions/bvh/: Neutral_throw_ball_001__A057.bvh  Neutral_walk_forward_002__A057.bvh  big_light_one_hand_pick_up_front_low_R_005__A508.bvh  body_stretch_1_004__A069.bvh  dance_basic_chaines_180_R_001__A306.bvh  (+5 more)
licenses/: imgui_bundle-LICENSE.txt  trimesh-LICENSE.txt  usd-core-LICENSE.txt
soma_retargeter/: __init__.py
soma_retargeter/animation/: animation_buffer.py  ik.py  mesh.py  skeleton.py
soma_retargeter/assets/: __init__.py  bvh.py  csv.py  usd.py
soma_retargeter/pipelines/: feet_stabilizer.py  ik_objectives.py  joint_limit_clamper.py  newton_pipeline.py  utils.py
soma_retargeter/renderers/: base_renderer.py  coordinate_renderer.py  mesh_renderer.py  skeleton_renderer.py
soma_retargeter/robotics/: calibration.py  csv_animation_buffer.py  human_to_robot_scaler.py
soma_retargeter/utils/: io_utils.py  math_utils.py  newton_utils.py  pose_utils.py  space_conversion_utils.py  time_utils.py
tools/: calibrate_robot_offsets.py  engineai_pm01_reference_pose.json  hightorque_pi_plus_reference_pose.json  pndbotics_adam_lite_reference_pose.json  unitree_g1_reference_pose.json
(+66 files in other folders)
